<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Campsite Locator</string>
    <string name="logged_in">You are logged in as %s.</string>
    <string name="not_logged_in">You are not logged in.</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="map">Map</string>
    <string name="features">Features</string>
    <string name="update_campsite">Update Campsite</string>
    <string name="delete_campsite">Delete Campsite</string>
    <string name="avg_rating">Avg Rating</string>
    <string name="photo">Photo</string>
    <string name="twitter">Twitter</string>
    <string name="id_number">ID</string>
    <string name="campsite_list">Campsite List</string>
    <string name="campsite_location">Campsite Location</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="campsite">Campsite</string>
    <string name="latest_news">Latest News</string>
    <string name="twitter_account">Twitter Account</string>
    <string name="create_account">Create Account</string>
    <string name="add_new_campsite">Add New Campsite</string>
    <string name="search_campsites">Search Campsites</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="your_rating">Your Rating</string>
    <string name="about_the_app">About the App</string>
    <string name="app_description">A mobile application that can be used to locate and rate campsites.\n\nby David McWilliams\nOctober, 2020\nCS 499\nSNHU</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="create_new_account">Create New Account</string>
    <string name="send">Send</string>
    <string name="send_feedback">Please send us your feedback about the app.</string>
    <string name="rate_us_description">How would you rate this app?</string>
    <string name="no_campsites_found">No campsites found.</string>
    <string name="searching">Searching…</string>
    <string name="location_updated">Location Updated: %1$s</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="no_ratings_yet">No ratings yet</string>
</resources>
