<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editLocation"
                    android:layout_width="0dp"
                    android:layout_weight="0.50"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/location"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/mapButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="onClick"
                    android:text="@string/map" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:text="@string/features"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editFeatures"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/features"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTwitter"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/twitter_account"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:id="@+id/photoBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:id="@+id/photoPreview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/add_photo"
                    android:contentDescription="@string/photo"/>
            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/createCampsiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/add_new_campsite"/>
    </LinearLayout>
</ScrollView>