<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/editName"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/favorite"
                    android:textSize="18sp"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:onClick="onClick">

                    <com.cs360.campsitelocator.CustomSwitch
                        android:id="@+id/favoriteSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/avg_rating"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/averageRatingView"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/your_rating"
                    android:textSize="18sp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    >
                    <SeekBar
                        android:id="@+id/yourRatingView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:splitTrack="false"
                        android:max="5"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.16"
                            android:gravity="center_horizontal"
                            android:text="0"
                            android:textSize="18sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.16"
                            android:gravity="center_horizontal"
                            android:text="1"
                            android:textSize="18sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.16"
                            android:gravity="center_horizontal"
                            android:text="2"
                            android:textSize="18sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.16"
                            android:gravity="center_horizontal"
                            android:text="3"
                            android:textSize="18sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.16"
                            android:gravity="center_horizontal"
                            android:text="4"
                            android:textSize="18sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.16"
                            android:gravity="center_horizontal"
                            android:text="5"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/location"
                    android:paddingBottom="12dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/editLocation"
                    android:layout_width="0dp"
                    android:layout_weight="0.50"
                    android:paddingBottom="12dp"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/mapButton"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:onClick="onClick"
                    android:text="@string/map"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/features"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/editFeatures"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/twitterBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/latest_news"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/editTwitter"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:autoLink="web"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/photoBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/photo"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:id="@+id/photoPreview"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:contentDescription="@string/photo"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>