<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/searchSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/search_options"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/locationBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/locationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.75"
            android:hint="@string/location"
            android:textSize="18sp" />

        <Button
            android:id="@+id/mapButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onClick"
            android:text="@string/map" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/distanceBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Distance: "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/searchDistance"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:hint="Miles"
            android:inputType="number"
            android:text="150" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=" miles"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/search" />

</LinearLayout>